# BioCSSwitch-Linux

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-pages.yml  linux-package.yml  macos-package.yml  regenerate-cargo-lock.yml
desktop/: README.md  package-lock.json  package.json
desktop/src/: index.html  main.js  styles.css  ui-logic.js  ui-logic.test.js
desktop/src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
desktop/src-tauri/.cargo/: audit.toml
desktop/src-tauri/src/: config.rs  lib.rs  netcanon.rs  packs.rs  proc.rs  proxy.rs  scratch.rs  state.rs  tests.rs  verification.rs
desktop/src-tauri/src/commands/: sandbox_cmd.rs  sandbox_runtime.rs  task_cmd.rs  update_cmd.rs  verify_cmd.rs
docs/: DEVELOPMENT.md  LINUX.md  bio-unknowns.md  dependency-analysis.md  index.html  packs.md  release-readiness.md  research-partner-crossmodal.md
docs/implementation-notes/: bio-audit.md  (+1 more)
packs/: SKILLS_AUDIT.md  pack.schema.json
proxy/: csswitch_proxy.py  debate_arena.py  http_transport.py  qwen_proxy.py  request_context.py  requirements-runtime.txt  task_router.py  ultra_orchestrator.py
python-vendor/: README.md
scripts/: doctor.sh  launch-virtual-sandbox.sh  stop-science-sandbox.sh  vendor-python-runtime.py
test/: run-bio.sh  run-offline.sh  run_all.sh  test_bio_offline.py  test_ci_security.py  test_contradiction_hypotheses.py  test_crossmodal.py  test_http_transport.py  test_partner_crossmodal_packs.py  test_proxy_auth.py  test_proxy_dsml_e2e.py  test_proxy_units.py  test_research_partner.py  test_research_routing.py  test_skills_audit_regressions.py  test_ultra_fallback.py
(+140 files in other folders)
