[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "biocsswitch"
version = "0.3.6"
description = "BioCSSwitch desktop companion and biomedical MCP/Skill packs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
