[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "biocsswitch"
version = "0.4.2"
description = "BioCSSwitch desktop companion and biomedical MCP/Skill packs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx[http2]>=0.28,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["packs", "packs.*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
