[package]
name = "desktop"
version = "0.4.2"
description = "BioCSSwitch desktop app (process manager + biomedical research pack panel)"
authors = ["BioCSSwitch"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.11"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
url = "2"
